TransferJob: fix for when the readChannelFinished has already been emitted before start is called()

Summary:
This fixes a regression by the removal of the busy loop call from bcdbe62660a9ca91b0d15f3a9a06a758ec8fdcda

BUG: 386246

Test Plan:
New test passes with the new code, didn't pass before
Sending very small files with kde connect works again

Reviewers: dfaure, apol, albertvaka

Reviewed By: dfaure, apol

Subscribers: ngraham, nicolasfella, anthonyfieroni, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D9190