src/core/transferjob.h
@@ -206,6 +206,7 @@ private:
     Q_PRIVATE_SLOT(d_func(), void slotSubUrlData(KIO::Job *, const QByteArray &))
     Q_PRIVATE_SLOT(d_func(), void slotDataReqFromDevice())
     Q_PRIVATE_SLOT(d_func(), void slotIODeviceClosed())
+    Q_PRIVATE_SLOT(d_func(), void slotIODeviceClosedBeforeStart())
     Q_DECLARE_PRIVATE(TransferJob)
 
     // A FileCopyJob may control one or more TransferJobs
