autotests/jobtest.cpp
@@ -297,6 +297,42 @@ void JobTest::storedPutIODeviceTempFile()
     QVERIFY(QFile::remove(dest));
 }
 
+void JobTest::storedPutIODeviceFastDevice()
+{
+    const QString filePath = homeTmpDir() + "fileFromHome";
+    const QUrl u = QUrl::fromLocalFile(filePath);
+    const QByteArray putDataContents = "This is the put data";
+    QBuffer putDataBuffer;
+    QVERIFY(putDataBuffer.open(QIODevice::ReadWrite));
+
+    KIO::StoredTransferJob *job = KIO::storedPut(&putDataBuffer, u, 0600, KIO::Overwrite | KIO::HideProgressInfo);
+    QSignalSpy spyPercent(job, SIGNAL(percent(KJob*,ulong)));
+    QVERIFY(spyPercent.isValid());
+    QDateTime mtime = QDateTime::currentDateTime().addSecs(-30);   // 30 seconds ago
+    mtime.setTime_t(mtime.toTime_t()); // hack for losing the milliseconds
+    job->setModificationTime(mtime);
+    job->setTotalSize(putDataContents.size());
+    job->setUiDelegate(nullptr);
+    job->setAsyncDataEnabled(true);
+
+    // Emit the readChannelFinished even before the job has had time to start
+    const auto pos = putDataBuffer.pos();
+    int size = putDataBuffer.write(putDataContents);
+    putDataBuffer.seek(pos);
+    putDataBuffer.readChannelFinished();
+
+    QVERIFY(job->exec());
+    QCOMPARE(size, putDataContents.size());
+    QCOMPARE(putDataBuffer.bytesAvailable(), 0);
+
+    QFileInfo fileInfo(filePath);
+    QVERIFY(fileInfo.exists());
+    QCOMPARE(fileInfo.size(), (long long)putDataContents.size());
+    QCOMPARE((int)fileInfo.permissions(), (int)(QFile::ReadOwner | QFile::WriteOwner | QFile::ReadUser | QFile::WriteUser));
+    QCOMPARE(fileInfo.lastModified(), mtime);
+    QVERIFY(!spyPercent.isEmpty());
+}
+
 void JobTest::storedPutIODeviceSlowDevice()
 {
     const QString filePath = homeTmpDir() + "fileFromHome";
